# Wan_i2v_research

./: .gitignore  README.md  pyproject.toml  router.py
assets/configs/: wan_i2v_ckpt_config.json
video_api/: service.py
video_api/configs/: clip_vision_h.json  wan2.1-i2v-14b-480p-Q4_K_M.json  wan_2.1_vae.json
video_api/gguf_loader/: comfy_ops.py  ops.py
video_api/models/ldm/: vae.py  wan.py
video_api/models/text_encoder/: clip_vision.py  tokenizer.py  wan.py
video_api/sampling/: model_sampling.py
video_api/sampling/k_diffusion/: sampling.py
video_api/services/: pipelines.py  wan_i2v_service.py
video_api/utils/: __init__.py  attention_utils.py  file_utils.py  latent_utils.py  lora_utils.py  sample_utils.py  video_utils.py
